<resources>
    <string name="app_name">新闻 App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">标题:</string>
    <string name="title_input">请输入新闻标题</string>
    <string name="content">内容:</string>
    <string name="content_input">请输入新闻内容</string>
    <string name="source">作者:</string>
    <string name="source_input">请输入新闻作者</string>
</resources>